chore: update harbor formulas

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <div class="pane-header" data-pane="dependencies">
               <span class="pane-toggle"></span>
               <span class="pane-title">DEPENDENCIES</span>
+              <span class="pane-count" id="dependenciesCount" aria-label="0 dependencies">0</span>
             </div>
             <div class="pane-content" id="dependenciesContent"></div>
           </div>
