Improve stray text linting

--- a/index.html
+++ b/index.html
@@ -38,7 +38,27 @@
           <div class="folder-content" id="projectFolderContent">
             <div class="file-item selected">
               <span class="file-icon excel">X</span>
-              <span>financial model.xlsx</span>
+              <span>financial models.xlsx</span>
+            </div>
+            <div class="file-item">
+              <span class="file-icon excel">X</span>
+              <span>Budget (1).xlsx</span>
+            </div>
+            <div class="file-item">
+              <span class="file-icon excel">X</span>
+              <span>cashflow_vfinal_final.xlsx</span>
+            </div>
+            <div class="file-item">
+              <span class="file-icon excel">X</span>
+              <span>OpPlan-2030.xlsx</span>
+            </div>
+            <div class="file-item">
+              <span class="file-icon excel">X</span>
+              <span>earnings_sim.xlsx</span>
+            </div>
+            <div class="file-item">
+              <span class="file-icon excel">X</span>
+              <span>macro-sanity.xlsx</span>
             </div>
           </div>
         </div>
