--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             aria-expanded="true"
             title="Collapse File Explorer"
           >
-            &lt;&lt;
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10 2L6 8L10 14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+            </svg>
           </button>
         </div>
         <div class="file-tree">
@@ -72,9 +74,11 @@
         <!-- Grid Section (60%) -->
         <div class="grid-container">
           <div class="grid-header">
-            <select class="grid-name-dropdown" id="gridNameDropdown">
-              <option value="" selected>New name....</option>
-            </select>
+            <div class="grid-name-dropdown-wrapper">
+              <select class="grid-name-dropdown" id="gridNameDropdown" required>
+                <option value="" selected>New name....</option>
+              </select>
+            </div>
           </div>
           <div class="grid-wrapper">
             <div class="grid-wrapper-inner" id="gridWrapperInner">
