Replace custom DOM grid with Handsontable - Add Handsontable adapter and HyperFormula data sync - Use native Handsontable selection and events

--- a/index.html
+++ b/index.html
@@ -82,14 +82,7 @@
           </div>
           <div class="grid-wrapper">
             <div class="grid-wrapper-inner" id="gridWrapperInner">
-              <table class="grid-table" aria-label="Spreadsheet grid">
-                <thead id="gridHeader">
-                  <tr>
-                    <th scope="col"></th>
-                  </tr>
-                </thead>
-                <tbody id="gridBody"></tbody>
-              </table>
+              <div class="handsontable-root" id="handsontableRoot" aria-label="Spreadsheet grid"></div>
               <div class="selection-overlay" id="selectionOverlay">
                 <div class="selection-border-handle selection-border-handle-top" data-edge="top"></div>
                 <div class="selection-border-handle selection-border-handle-right" data-edge="right"></div>
